# gtk4-c-examples

./: .gitignore  README.md  build.sh  meson.build
.devcontainer/: Dockerfile  devcontainer.json
examples/adwaita-ui-file/: Makefile  main.c  window.ui
examples/adwaita-ui-file-2/: Makefile  main.c  window.ui
examples/app-handles-open/: Makefile  main.c
examples/hello-adwaita/: Makefile  main.c
examples/hello-gtk/: Makefile  main.c
examples/hello-world/: Makefile  README.md  hello-world  main.c  meson.build
examples/menus-and-actions/: Makefile  main.c
examples/notebook/: Makefile  main.c
examples/save-dialog/: Makefile  main.c
examples/signals/: Makefile  README.md  main.c  meson.build  signals
examples/text-editor/: Makefile  main.c  window.ui
examples/ui-file/: Makefile  main.c
examples/ui-file-2/: Makefile  main.c  window.ui
examples/ui-file-resource/: Makefile  main.c  resources.xml  window.ui
examples/wip/adwaita-tab-view/: CMakeLists.txt  adw-tab-view-demo-page.c  adw-tab-view-demo-window.c  main.c  resources.c  resources.xml
scripts/: clean.sh  screenshots.sh
